--- a/src/assets/scss/components/_tooltips.scss
+++ b/src/assets/scss/components/_tooltips.scss
@@ -51,3 +51,31 @@
     }
   }
 }
+.tooltip__close {
+  position: absolute;
+  top: 3px;
+  right: 4px;
+  padding: 0;
+  width: $p-line-rem;
+  height: $p-line-rem;
+  border: 0;
+  border-radius: 50%;
+  background: transparent;
+  color: $grey-400;
+  &:active {
+    background: $grey-1200;
+  }
+  &:after {
+    display: block;
+    content: '\00d7';
+    height: 1px;
+    font-size: 1.625rem;
+    line-height: 0;
+  }
+  .dark-mode & {
+    color: $grey-1200;
+    &:active {
+      background: $grey-300;
+    }
+  }
+}
