--- a/src/assets/scss/components/_tooltips.scss
+++ b/src/assets/scss/components/_tooltips.scss
@@ -3,7 +3,7 @@
 \*---------------------------------------------------------------------------*/
 .tooltip {
   position: absolute;
-  bottom: calc(100% - 2px);
+  bottom: calc(100% - 8px);
   padding: 3px 8px;
   border-top: 1px solid $grey-1000;
   border-radius: 12px;
@@ -12,11 +12,12 @@
   opacity: 0;
   visibility: hidden;
   z-index: 1;
-  transition: opacity .15s ease-in, visibility 0s linear .15s;
+  transition: bottom .15s ease-in, opacity .15s ease-in, visibility 0s linear .15s;
   &.active {
+    bottom: calc(100% - 2px);
     opacity: 1;
     visibility: visible;
-    transition: opacity .15s ease-out;
+    transition: bottom .15s ease-out, opacity .15s ease-out;
   }
   &:before, &:after {
     @extend %psuedo-element;
@@ -62,15 +63,26 @@
   border-radius: 50%;
   background: transparent;
   color: $grey-400;
-  &:active {
-    background: $grey-1200;
+  &:before, &:after {
+    @extend %psuedo-element;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    width: 16px;
+    height: 3px;
+    border-radius: 2px;
+    background: currentColor;
+    transform: translate(-50%,-50%) rotate(45deg);
   }
   &:after {
-    display: block;
-    content: '\00d7';
-    height: 1px;
-    font-size: 1.625rem;
-    line-height: 0;
+    transform: translate(-50%,-50%) rotate(135deg);
+  }
+  &:active {
+    background: $grey-1200;
+    &:before, &:after {
+      top: calc(50% + 1px);
+    }
   }
   .dark-mode & {
     color: $grey-1200;
